# doorlock

.github/workflows/: frontend.yml
frontend/v2/firmware/: Cargo.toml
frontend/v2/firmware/lockfw/: Cargo.toml
frontend/v2/firmware/lockfw/src/: main.rs
frontend/v2/firmware/locklogic/: Cargo.toml
frontend/v2/firmware/locklogic/src/: display.rs  lib.rs
