[package]
name = "lockfw"
version = "1.0.0"
edition = "2021"
resolver = "2"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
embedded-hal = "0.2.7"
fugit = "0.3.7"
lockbsp = { path = "../lockbsp" }
locklogic = { path = "../locklogic" }
micromath = "2.1.0"
panic-halt = "0.2.0"
ssd1306 = "0.8.4"
